fixed log book and vids on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -582,7 +582,7 @@ input {
   .main-grid-container {
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
-    grid-template-rows: 10% 5% 45% 32% 8%;
+    grid-template-rows: 100px 70px 45% 32% 8%;
   }
 
   .header-grid {
@@ -700,7 +700,7 @@ input {
     grid-column: 1 / span 4;
     grid-row: 3 / span 4;
     padding: 1%;
-    margin-top: 8%;
+    margin-top: 2%;
   }
   .first-paragraph {
     margin: 0 auto;
@@ -810,25 +810,140 @@ input {
   .a {
     max-height: 90%;
   }
-  #signup-form {
-    margin-left: 0%;
-    width: 100%;
-    font-size: x-small;
-    text-align: center;
-    margin-top: 1%;
-    grid-column: 1 / span 4;
-    grid-row: 5;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .signup-label {
+  #vids {
     padding: 0%;
     margin: 0%;
+  }
+  .vids-container {
+    grid-column: 1;
+    grid-row: 3;
+    padding: 0%;
+    margin: 0%;
+  }
+  .vids-intro {
+    padding: 0%;
+    font-size: larger;
+    text-align: center;
+  }
+  .vids-grid-container {
+    grid-row: 3 / span 4;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    row-gap: 0.5%;
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+
+  .vids-grid-item {
+    text-align: center;
+    align-items: center;
+    max-width: 100%;
+    font-size: larger;
+    max-height: 100%;
+    display: inline-table;
+    border-width: 4px;
+    padding: 1%;
+  }
+  .ticked-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  .ticked-image {
+    border-radius: 50% 50% 50% 50%;
+    max-width: 200px;
+    max-height: 150px;
+  }
+  .log-grid {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 2%;
+    margin-left: 5%;
+    text-align: center;
+    max-width: 90%;
+    max-height: 90%;
+    list-style: none;
+  }
+  .window {
+    width: 50%;
+    height: 50%;
+    min-height: 100px;
+    overflow: hidden;
+    resize: both;
+    z-index: 99;
+  }
+
+  .window__head {
+    display: flex;
+    width: 100%;
+    max-height: 60%;
+    cursor: move;
+  }
+
+  .window__head-meta {
+    width: 100%;
+    padding: 2px 4px;
+    overflow: hidden;
+  }
+
+  .window__head-title {
+    font-size: x-small;
+    max-width: 100%;
+  }
+
+  .window__head-controllers {
+    width: 80%;
+    padding: 0 0.5rem;
+    height: 70%;
+    gap: 1%;
+  }
+
+  .window__head-button {
+    width: 20%;
+    height: 0.5rem;
     font-size: x-small;
   }
-  input {
-    width: 150px;
+  .window__body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: calc(100% - 32px);
+    min-height: 100%;
+
+    .window__frame {
+      width: 100%;
+      height: 97%;
+      min-height: 80px;
+      font-size: small;
+      padding-top: 2%;
+    }
+    #signup-form {
+      margin-left: 0%;
+      width: 100%;
+      font-size: x-small;
+      text-align: center;
+      margin-top: 1%;
+      grid-column: 1 / span 4;
+      grid-row: 5;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    .signup-label {
+      padding: 0%;
+      margin: 0%;
+      font-size: x-small;
+    }
+    input {
+      width: 150px;
+    }
   }
 }
